...
                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="87R-Yj-gfg" userLabel="ViewModal" customClass="BMViewModal" customModule="CloudVision" customModuleProvider="target">
                                <rect key="frame" x="16" y="96" width="288" height="288"/>
                                <subviews>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="O8h-00-fLm" userLabel="PictureUIImageView">
                                        <rect key="frame" x="1" y="1" width="286" height="286"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" identifier="PictureUIImageView"/>
                                        <gestureRecognizers/>
                                    </imageView>
                                </subviews>
...
                                    <outletCollection property="gestureRecognizers" destination="7kS-2g-j1M" appends="YES" id="K51-5S-IpV"/>
                                </connections>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f9b-jI-0MG">
                                <rect key="frame" x="16" y="389" width="288" height="33"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Done">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="done:" destination="RNp-AO-zBl" eventType="touchUpInside" id="7ci-Gk-EPe"/>
                                </connections>
                            </button>
...
