...
import UIKit
import AVFoundation
import Photos

class BMImagePicker{
    #if DEBUG
    static let FAKER_IMAGE_SELECTED = "fakerImageSelected"
    #endif
    var viewController:
    UIViewController &
    UIImagePickerControllerDelegate &
    UINavigationControllerDelegate
    var imagePickerController: UIImagePickerController!
...
